@@ -11,15 +11,16 @@
     "ModelDB::ModelBuilder": "lib/ModelDB/ModelBuilder.pm6",
     "ModelDB::Schema": "lib/ModelDB/Schema.pm6",
     "ModelDB::Collection": "lib/ModelDB/Collection.pm6",
-    "ModelDB::Table": "lib/ModelDB/Table.pm6"
+    "ModelDB::Table": "lib/ModelDB/Table.pm6",
+    "ModelDB::Object": "lib/ModelDB/Object.pm6"
   },
   "auth": null,
   "resources": [
-    
+
   ],
   "version": "0.0.3",
   "tags": [
-    
+
   ],
   "test-depends": [
     "Test"
@@ -36,7 +37,7 @@
     "source": null
   },
   "build-depends": [
-    
+
   ],
   "authors": [
     "Sterling Hanenkamp <hanenkamp@cpan.org>"
