@@ -1,0 +1,3 @@
+use v6;
+
+unit role ModelDB::Object;
