@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    * Adding a new create method from existing row object.
+
 v0.0.3	2018-11-16
 
     * Initial revision.
